Fix whitespace issue on lower mobile screen

--- a/Week-1/Portfolio Webpage/css/styles.css
+++ b/Week-1/Portfolio Webpage/css/styles.css
@@ -22,6 +22,15 @@
     }
 }
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 
 body {
     background-color: #EFEFEF;
